--- a/templates/classes.html
+++ b/templates/classes.html
@@ -30,14 +30,15 @@
 <body>
     <div class="sidebar">
         <div class="sidebar-header">
-            <h2>SDM</h2>
+            <h2>UECM</h2>
         </div>
         <ul>
-            <li><a href="/">Home</a></li>
+            <li><a href="/backhome">Home</a></li>
             <li><a href="/attendance_view">Attendance</a></li>
             <li><a href="#">Students</a></li>
-            <li><a href="/classes">Classes</a></li>
+            <li><a href="/Classes">Classes</a></li>
             <li><a href="#">Settings</a></li>
+            <li><a href="/logout">Logout</a></li>
         </ul>
     </div>
     <div class="main-content">
