--- a/static/css/remove.css
+++ b/static/css/remove.css
@@ -10,7 +10,7 @@
 body {
   display: flex;
   font-family: 'Arial', sans-serif;
-  background-color: #1f002d;
+  background-color: #ffffff;
   height: 100vh;
   overflow: hidden;
 }
