--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Attendance Tracker Sheet</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/remove.css')}}">
     <style>
         /* Additional custom styles can be added here */
         body {
@@ -51,7 +51,7 @@
                 <input type="date" id="selected_date" name="selected_date" class="form-control" required value="{{ selected_date }}">
             </div>
             <button type="submit" class="btn btn-outline-success">Show Attendance</button>
-            <a href="/" class="btn btn-primary">Back to Home</a>
+            <a href="/backhome" class="btn btn-primary">Back to Home</a>
         </form>
         
         {% if no_data %}
