--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,9 @@
     <title>Login</title>
 </head>
 <body>
+  <div class="box">
     <div class="container">
+      
         <h2>Login</h2>
         {% with messages = get_flashed_messages(with_categories=true) %}
           {% if messages %}
@@ -26,5 +28,6 @@
             <button type="submit">Login</button>
         </form>
     </div>
+  </div>
 </body>
 </html>
